## PLUXML 5.8.3.legacy (yyyy/mm/dd) ##
Fix sitemap.php & feed.php to work with #php55legacy (sudwebdesign)
Fix medias.php rename field size to 255 + enlarge dialog box (sudwebdesign)
[+] medias.php add width & height to all thumbs images (bazooka07 + sudwebdesign) : Like https://github.com/pluxml/PluXml/pull/395
Fix Install don't work if short open tag = On (sudwebdesign)
Fix Russian duplicate key L_UPDATE_CATEGORIES_MIGRATION on update.php lang file (sudwebdesign)
Fix Italian comma (,) to semicolon (;) in update.php lang file (sudwebdesign)
Fix Missing keys for install.php (all langs) (sudwebdesign)
Fix plxTimezones::timezones to run with PHP5 (sudwebdesign)
Fix plxToken::getTokenPostMethod to run with PHP5 (sudwebdesign)
[+] #389 Improve & Fix duplicate langs constants (bazooka07) & remove the PHP closing tag at the end of the files (sudwebdesign)
[+] #387 New icons (copy urls & rename) on media manager + Fix rename with push "Enter" (bazooka07)
FIX #386 Bcc typo in plxUtils::sendmail (bazooka07)
FIX Change lang if empty required fields & Install with push "enter" (sudwebdesign)
FIX lib/config.php const2define PLX_URL_VERSION #php55legacy (sudwebdesign)
[+] Load classes with loop in index.php, install.php, feed.php, update/index.php: (bazooka07, sudwebdesign)
[+] New constant PHP_VERSION_MIN (bazooka07) 5.5 (sudwebdesign)
[+] Use output buffer (ob_start() ob_get_clean();) to simplify human readable install.php #DevFriendly (bazooka07)
[+] Required attributes it's active on install page (bazooka07)
[+] Stop with exit command after load lang (bazooka07)
[+] Install Auto create plugins, data folders +minimum files (sudwebdesign)
[+] gitignore unfollow data & plugins folders & it's removed (sudwebdesign)
#bugfix branch
[+] #286 plxUtils::unSlash($content) recusive for multidimentional array (sudwebdesign)
[+] #385 Enhancement for CSRF token (bazooka07)
[+] #385 Refacto lostpassword token generation (P3ter)